v6.4
-----


v6.3.4
-----
+ Rewrote regional price comparision to increase speed and pull data from our own API server

v6.3.3
-----
- Removed a feature that caused many people's wishlist to load slowly

v6.3.2
-----
+ Added Early Access banners to Summer Sale homepage
+ Added ability to sort Summer Sale team rankings to scale
: Fixed a bug where scrolling on the home page would cause items not to highlight correctly

v6.3.1
-----
+ Buy orders will now be totaled on the market homepage
+ Added highlighting to the homepage of the Steam Summer Sale
: Fixed a bug where active marketplace totals were incorrect for some currencies

v6.3
-----
+ Added an information dialog to app pages that are excluded from Family Sharing
+ Steam user review scores are now loaded more quickly
: Multiple DRM warnings now display in a single warning banner
: Fixed a bug where some market links were not showing up on certain badge pages
: Fixed several bugs caused by Valve's CDN name change

v6.2.1
-----
+ Added inventory market data to other user's inventories
+ Added avg price of 3 cards to booster packs in inventory

v6.2
-----
+ Rewrote custom profile background selection dialog
+ Added a link to a game's AStats page in the achievement section on app pages
+ Added support for Humble Widgets in price comparisons
: Fixed a bug where Legend of Grimrock store page could inadvertently show incorrect DRM warnings
: Fixed a bug with account total not being correct for Russian currencies
- Removed market data on inventory items, as this feature was implemented by Valve
- Removed achievement section on app pages, as this was re-implemented by Valve

v6.1
-----
+ Added a "Popular" tab on the homepage to browse the most-played games on Steam
+ Store pages now display a full size background
+ Added back links in the header (Forums, Games, Reviews)
+ Selecting booster packs in your inventory now shows the average price of three cards for that game
+ Added option to only search within product names