@@ -2420,6 +2420,7 @@ function bind_ajax_content_highlighting() {
 						start_highlighting_node(this);
 						check_early_access(this, "ea_231x87.png", 0);
 					});
+					show_win_mac_linux();
 				}
 
 				if (node.classList && node.classList.contains("match")) start_highlighting_node(node);
@@ -3822,6 +3823,30 @@ function search_in_names_only(calledbyajax) {
 	}
 }
 
+// Show what platform games are for
+function show_win_mac_linux() {
+	if (window.location.host != "store.steampowered.com" || !(/^\/$/.test(window.location.pathname))) return;
+	$(".summersale_dailydeal:not(.tiny)").each(function () {
+		var node = $(this);
+		if (node.find("#es_platform").length > 0) return;
+		var id = get_appid(node.attr("href"));
+		if (!id) return;
+		get_http('http://store.steampowered.com/api/appdetails/?filters=platforms&appids=' + id, function (data) {
+			if (data) {
+				var storefront_data = JSON.parse(data);
+				var platforms = storefront_data[id]['data']['platforms'];
+				var footer = node.children(".dailydeal_footer").first();
+				var html = '<div style="padding: 2px" id="es_platform">';
+				if (platforms['windows']) html += '<span class="platform_img win"></span>';
+				if (platforms['mac']) html += '<span class="platform_img mac"></span>';
+				if (platforms['linux']) html += '<span class="platform_img linux"></span>';
+				html += '</div>';
+				footer.prepend(html);
+			}
+		});
+	});
+}
+
 var ownedColor,
 	wishlistColor,
 	hideInstallSteam,
@@ -3981,6 +4006,7 @@ $(document).ready(function(){
 							add_popular_tab();
 							add_carousel_descriptions();
 							//add_affordable_button();
+							show_win_mac_linux();
 							break;
 					}
 
