@@ -1,5 +1,6 @@
 v6.4
 -----
++ Added platform icons to the summer sale homepage
 
 
 v6.3.4
